Error Mitigation/MagiCoder/Data/javax_swing_filechooser/javax_swing_filechooserOutputResult.txt
Sample: FileFilter_1
----------------------------------------------------------------
stdout:
example.txt is accepted by the filter.

================================================================

Sample: FileFilter_2
----------------------------------------------------------------
stdout:
Text files (*.txt)

================================================================

Sample: FileNameExtensionFilter_2
----------------------------------------------------------------
stdout:
JPG and GIF Images

================================================================

Sample: FileNameExtensionFilter_3
----------------------------------------------------------------
stdout:
jpg
gif

================================================================

Sample: FileNameExtensionFilter_4
----------------------------------------------------------------
stdout:
true

================================================================

Sample: FileNameExtensionFilter_5
----------------------------------------------------------------
stdout:
javax.swing.filechooser.FileNameExtensionFilter@710726a3[description=JPG & GIF Images extensions=[jpg, gif]]

================================================================

Sample: FileSystemView_1
----------------------------------------------------------------
stdout:
javax.swing.filechooser.UnixFileSystemView@57175e74

================================================================

Sample: FileSystemView_2
----------------------------------------------------------------
stdout:
Home directory: /home/yixi

================================================================

Sample: FileSystemView_3
----------------------------------------------------------------
stdout:
/

================================================================

Sample: FileSystemView_4
----------------------------------------------------------------
stdout:
Default Directory: /home/yixi

================================================================

Sample: FileView_2
----------------------------------------------------------------
stdout:
test.txt

================================================================

Sample: FileView_3
----------------------------------------------------------------
stdout:
A JPEG Compressed Image File

================================================================

Sample: FileView_4
----------------------------------------------------------------
output:
./Data/javax_swing_filechooser/javaFiles/FileView_4.java:19: error: cannot find symbol
            public Icon getIcon(File f) {
                   ^
  symbol: class Icon
1 error


================================================================

